/* ==========================================================
 *
 * Generated by system . DO NOT EDIT!
 * ========================================================== */


// gskPbReportData;
message PbReportBaseInfo
{
    optional uint32               Uin                           = 1;  //--用户ID
    optional int32                Clt                           = 2;  //--客户端id(ios/android/pc/mac)
    optional string               Phone                         = 3;  //--手机号
    optional int32                Dye                           = 4;  //--染色ID
    optional string               Ip                            = 5;  //--ip
    optional string               Name                          = 6;  //--用户昵称
    optional string               Province                      = 7;  //--省
    optional string               City                          = 8;  //--市
    optional string               CompanyType                  = 9;  //--公司类型
    optional string               YearsOfWorking              = 10;  //--工作年限
    optional string               JobType                      = 11;  //--工作类型
    optional string               JobTitle                     = 12;  //--职称
    optional int32                InviterUid                   = 13;  //--邀请者id
    optional int32                FriendNum                    = 14;  //--好友数量
    optional int32                ContinuityDayNum            = 15;  //--连续登陆天数
    optional int32                ProjectMembersNum           = 16;  //--项目添加成员数量
    optional string               Company                       = 17;  //--公司名称
}

//-----------------------------单条聊天信息
message PbReportMsgItem
{
    optional string               MsgId                        = 1;  //--消息id
    optional uint32               MsgType                      = 2;  //--消息类型/文本、语音...
    optional string               MsgBody                      = 3;  //--消息内容
    optional int32                SenderId                     = 4;  //--消息发送者id
    optional string               SenderName                   = 5;  //--消息发送者name
    optional string               SenderRemark                 = 6;  //--消息发送者在该群中的昵称
    optional string               SenderAvatar                 = 7;  //--消息发送者头像
    optional string               GroupId                      = 8;  //--群组id
    optional uint32               GroupType                    = 9;  //--群组类型
    optional string               GroupName                    = 10;  //--群组name
    optional string               GroupDesc                    = 11;  //--群组描述
    optional int32                SendTime                     = 12;  //--发送时间
    optional int32                MsgSeqId                    = 13;  //--消息seq
}

//-----------------------------上报
message PbReportClient
{
    optional string               PhoneInfo                    = 1;  //--手机信息
    optional string               Os                            = 2;  //--手机操作系统
    optional string               Sp                            = 3;  //--手机运营商
    optional string               Network                       = 4;  //--手机网络
    optional int32                Version                       = 5;  //--客户端版本
    optional int32                ClientId                     = 6;  //--客户端ID
    optional int32                ChannelId                    = 7;  //--客户端Channel
}

message PbReportReport
{
    optional int32                MsgType                      = 1;  //--1、请求
    optional int32                ICmd                         = 2;  //--命令字
    optional string               SCmd                         = 3;  //--命令字描述
    optional int32                Time                          = 4;  //
    optional string               Log                           = 5;  //
    optional PbReportBaseInfo Info                          = 6;  //--用户信息
    optional PbReportClient   Client                        = 7;  //--客户端上报信息
    optional PbReportMsgItem MsgItem                      = 8;  //--群消息信息
}

/* ==========================================================
 *
 * Generated by system . DO NOT EDIT!
 * ========================================================== */


